--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,72 @@
-article {
-  display: flex;
-  gap: 1rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+body {
+  background-color: #ffffff;
+  height: 100vh;
+  width: 100%;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 16px;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+header {
+  background-color: #e6e6e6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8rem;
+}
+header img {
+  padding: 1.25rem 0;
+}
+.header-title {
+  width: 100%;
+  text-align: center;
+}
+.heading {
+  text-transform: uppercase;
+  color: #005677;
+  background-color: #c4c4c4;
+  padding: 0.7rem;
+}
+.personal-info {
+  padding: 0.5rem;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.personal-info .data,
+.date {
+  font-weight: 700;
+}
+.data {
+  font-style: italic;
+}
+.container-details {
+  padding: 1rem;
+  display: flex;
+  gap: 0.2rem;
+}
+footer {
+  background: #005677;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 0.5rem;
+  color: #ffffff;
+}
+footer span {
+  font-size: 1.1rem;
+  font-weight: 700;
+}
+/* main:nth-last-child(3) {
+  margin-bottom: 3rem;
+} */
